-. change build.sbt for unmanged lib.